--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,6 +42,8 @@ jobs:
   # You may pin to the exact commit or the version.
   # uses: comchangs/action-maven@54db702e085ac767dad94c87e84499afb9d77162
         uses: comchangs/action-maven@v0.4-beta
+        with:
+          goals: 'clean install'
           
 
   # Deployment job
