--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -30,9 +22,9 @@ jobs:
 
     - name: Update DatabaseConfig.java
       run: |
-        cat <<EOF >> src/main/java/com/example/wadlogin/DatabaseConfig.java
+        cat <<EOF > src/main/java/com/example/wadlogin/DatabaseConfig.java
         package com.example.wadlogin;
-    
+
         public class DatabaseConfig {
             public static final String DB_URL = "${{ secrets.DB_URL }}";
             public static final String USER = "${{ secrets.DB_USER }}";
